--- a/src/components/WardrobeZero.css
+++ b/src/components/WardrobeZero.css
@@ -1,8 +1,20 @@
 .wardrobe0 img {
-  height: 200px;
+  height: 210px;
   border: 1px solid black
 }
 
-img.outfit {
-  height: 250px;
+
+img.active {
+  opacity: .5;
+  background-color: yellow;
+  border: 3px solid black;
+  height: 200px;
+}
+
+form button {
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 1em;
+  display: inline-block;
+  background-color: white;
 }
