--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 body {
-  margin: 0 auto;
+  margin: auto;
+  padding: 4em;
   max-width: 900px;
-  background-color: #ccc;
+  background-color: #fff;
+  background-image: url("./images/linedpaper.png");
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,8 +16,113 @@ code {
     monospace;
 }
 
-ul.navbar li{
+ul.navbar {
+  width: 100%;
+}
+
+div.navbar {
+  background-color: #ece9e4;
+  overflow: hidden;
   display: inline-block;
-  padding: .5em;
-  margin: 1px solid black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+ul.navbar a {
+  display: inline-block;
+  /* text-align: center; */
+  padding: 14px;
+  text-decoration: none;
+  color: black;
+}
+
+ul.navbar a:hover {
+  background-color: black;
+  color: #ece9e4;
+}
+
+ul.navbar a.title {
+  font-size: 34px;
+}
+
+div.buttons {
+  display: block;
+  text-align: center;
+}
+
+div.buttons a {
+  /* border-radius: 5px; */
+  box-shadow: 1px 1px;
+  padding: 11px;
+  border-radius: 4px;
+  color: black;
+  background-color: #ece9e4
+}
+
+div.buttons a:hover {
+  background-color: black;
+  color: #ece9e4;
+}
+
+div.buttons a:focus {
+  outline: none;
+}
+
+a.button {
+  text-decoration: none;
+  margin: 1em;
+}
+
+a.button:hover {
+  color: #ece9e4;
+  background-color: black;
+}
+
+
+div.buttons button {
+  /* border-radius: 5px; */
+  box-shadow: 1px 1px;
+  padding: 11px;
+  border-radius: 4px;
+  color: black;
+  background-color: #ece9e4
+}
+
+div.buttons button:hover {
+  background-color: black;
+  color: #ece9e4;
+}
+
+div.buttons button:focus {
+  outline: none;
+}
+
+button.button {
+  text-decoration: none;
+  margin: 1em;
+}
+
+button.button:hover {
+  color: #ece9e4;
+  background-color: black;
+}
+
+
+
+
+h2.outfit {
+  text-align: center;
+}
+
+div#next button{
+  margin-top: 1em;
+}
+
+p {
+  margin: 2em auto;
+  letter-spacing: 1.4px;
+  word-spacing: 5px;
 }
