--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ div.buttons a {
   /* border-radius: 5px; */
   box-shadow: 1px 1px;
   padding: 11px;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   color: black;
   background-color: #ece9e4
 }
@@ -84,11 +84,12 @@ a.button:hover {
 
 div.buttons button {
   /* border-radius: 5px; */
-  box-shadow: 1px 1px;
+  /* box-shadow: 1px 1px; */
   padding: 11px;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   color: black;
-  background-color: #ece9e4
+  background-color: #;
+  margin-top: 3em;
 }
 
 div.buttons button:hover {
